Add log, fixed